# Soda

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  imgui.ini
Libraries/: CMakeLists.txt  CMakePresets.json
SodaCan/: CMakeLists.txt  CMakePresets.json
SodaCan/CMake/: Files.cmake
SodaCan/Source/: Main.cpp
SodaCan/Source/Game/: Game.cpp  Game.h
SodaCan/assets/scenes/: exampleScene.stscn  main.stscn  scene2.stscn  test.stscn  test2.stscn
SodaCan/assets/shaders/: Shader2D.glsl
SodaCan/src/: AppLayer.cpp  AppLayer.h  SodaCan.cpp
SodaCan/src/GUI/: SodaGui.cpp  SodaGui.h
SodaCan/src/Panels/: Panels.cpp  Panels.h  SceneListPanel.cpp  SceneListPanel.h
SodaEngine/: CMakeLists.txt  CMakePresets.json  Version.h.in
SodaEngine/CMake/: Files.cmake
SodaEngine/Include/: Application.h
SodaEngine/Include/SodaEngine/: Application.h  Logger.h  SDAssert.h  Window.h
SodaEngine/Source/: SodaEnginePCH.h
SodaEngine/Source/API/: Vulkan.h  VulkanInstance.cpp  VulkanInstance.h
SodaEngine/Source/App/: Application.cpp  Window.cpp
SodaEngine/Source/Logging/: Assert.h  EngineLogger.h  Logger.cpp  SDEAssert.h
SodaEngine/include/: Soda.h  SodaInput.h
SodaEngine/src/: SD_PCH.h  Soda.h
SodaEngine/src/Core/: Core.h  Start.h  Timestep.h
SodaEngine/src/Core/App/: App.cpp  App.h  LayerStack.cpp  LayerStack.h  Layers.cpp  Layers.h
SodaEngine/src/Core/Events/: AppEvents.h  Events.h
SodaEngine/src/Core/Window/: Window.h
SodaEngine/src/Core/Window/GLFW/: GLFWWindow.cpp  GLFWWindow.h
SodaEngine/src/ECS/: Components.h  Object.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  ScriptEntity.h
SodaEngine/src/Editor/: EditorCamera.cpp  EditorCamera.h  OrthoCameraController.cpp  OrthoCameraController.h  SceneSerializer.cpp  SceneSerializer.h
SodaEngine/src/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h  ImGuizmo.cpp  ImGuizmo.h
SodaEngine/src/Input/: Input.h  MouseCodes.h
SodaEngine/src/Input/GLFW/: GLFWInput.cpp
SodaEngine/src/PlatformSrc/: GLFWInput.cpp  GLFWWindow.cpp  GLFWWindow.h
SodaEngine/src/Renderer/: Bufferer.cpp  Bufferer.h  Camera.h  Framebuffer.cpp  Framebuffer.h  Light.cpp  Light.h  Render.cpp  Render.h  RenderCommand.cpp  RenderCommand.h  Renderer2D.cpp  Renderer2D.h  Shaderer.cpp  Shaderer.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
SodaEngine/src/Renderer/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
SodaEngine/src/Soda/ECS/: CameraSystem.cpp  CameraSystem.h  Components.h  Object.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  ScriptEntity.h  Systems.cpp  Systems.h
SodaEngine/src/Soda/Events/: Events.h  KeyboardEvents.h  MouseEvents.h
SodaEngine/src/Soda/GameAssets/: OrthoCameraController.cpp  OrthoCameraController.h
SodaEngine/src/Soda/Input/: Input.h  KeyboardCodes.h
SodaEngine/src/Soda/Renderer/: Bufferer.h  Camera.cpp  Camera.h  CameraComponent.h  Framebuffer.cpp  Framebuffer.h  Light.h  Render.h  RenderAPI.cpp  RenderAPI.h  RenderCommand.h  RenderContext.h  Renderer2D.cpp  Renderer2D.h  RendererCamera.h  Shaderer.cpp  Shaderer.h  Texture.cpp  Texture.h  VertexArray.h
SodaEngine/src/Soda/Renderer/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
SodaEngine/src/Soda/Tools/: Logger.cpp  Logger.h  SpriteSheet.cpp  SpriteSheet.h
SodaEngine/src/Soda/Tools/Debug/: Profiler.h
SodaEngine/src/Soda/_Main/: App.cpp  App.h  Core.h  LayerStack.h  Layers.h  Start.h  Window.h
SodaEngine/src/Soda/imgui/: ImGuiLayer.cpp  ImGuiLayer.h
SodaEngine/src/Tools/: SpriteSheet.cpp  SpriteSheet.h
SodaEngine/src/Tools/Debug/: Logger.cpp  Logger.h  Profiler.cpp  Profiler.h
SodaEngine/src/Tools/FileDialogs/: tinyfiledialogs.cpp
TestingGrounds/src/: 2DGround.cpp  2DGround.h  Playground.cpp
